# git-change-detection

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.gitea/workflows/: build-publish.yml  release.yml  run-pre-commit.yml  unit-tests.yml
.gitlab-ci/workflows/: gate-commit-check.yml  gate-pre-commit.yml  merge-request.yml  publish.yml  release.yml
git_change_detection/: cli.py
git_change_detection/models/: dependency_graph.py
git_change_detection/schemas/: metadata.schema.json
git_change_detection/utils/: io.py  output.py
gitcd/: cli.py
gitcd/models/: dependency_graph.py  node_metadata.py
gitcd/utils/: git.py  output.py
tests/: conftest.py  test_dependency_graph.py  test_load_metadata_file.py  test_node_metadata.py  test_render_output.py
tests/fixtures/: invalid_metadata.json  invalid_metadata.yml  valid_metadata.json  valid_metadata.yml
tests/unit/: test_cli.py  test_dependency_graph.py  test_metadata_schema.py  test_node_metadata.py  test_utils_git.py  test_utils_io.py  test_utils_output.py
