[project]
name = "git-change-detection"
version = "0.1.1"
description = "Dependency-aware change detection for Git repositories."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "gitpython (>=3.1.45,<4.0.0)",
  "typer (>=0.17.4,<0.18.0)",
  "rich (>=14.1.0,<15.0.0)",
  "pydantic (>=2.11.7,<3.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "pytest-mock (>=3.15.0,<4.0.0)",
]

[dependency-groups]
test = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.14.10"]

[project.scripts]
git-change-detection = "git_change_detection.cli:app"

[[tool.uv.index]]
name = "ednz-cloud"
url = "https://gitlab.ednz.fr/api/v4/projects/5/packages/pypi/simple/"
publish-url = "https://gitlab.ednz.fr/api/v4/projects/5/packages/pypi"
authenticate = "always"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = ["pyproject.toml:^version"]
